libs/pavex_macros/tests/fail/serde_conflict_before_route_params_without_attributes.rs
#[derive(serde::Deserialize)]
#[pavex_macros::RouteParams]
struct MyStruct {
    field1: i32,
    field2: String,
}

fn main() {}
